# evdipp

./: .gitignore  .gitmodules  CMakeLists.txt
example/: CMakeLists.txt
libevdipp/: CMakeLists.txt  buffer.cpp  buffer.hpp  debug.hpp  evdi.cpp  screen.cpp  screen.hpp
monitorsim/: CMakeLists.txt  monitorsim.cpp  qevdiscreen.cpp  qevdiscreen.h  screenpreview.cpp
